--- a/frontend/src/components/css/grid.scss
+++ b/frontend/src/components/css/grid.scss
@@ -23,7 +23,7 @@
 }
 
 .gridBackground {
-	margin-top: 10px;
+	// margin-top: 10px;
 	background: none;
 	display: flex; 
 	flex-direction: column;
@@ -576,7 +576,7 @@
 	flex-direction: row;
 	justify-content: center;
 	align-items: center;
-	height: 100px;
+	height: 50px;
 }
 
 .inputTitle {
